EXTRA_DIST = $(man_MANS) README.dioxin.pov README.povray babel31.inc \
		dioxin.mol2 dioxin.inc dioxin.png dioxin.pov \
		CMakeLists.txt \
		FAQ.html OBTwoMigration.html \
		babel.html obchiral.html obfit.html obgrep.html \
		obprop.html obrotate.html obminimize.html obenergy.html \
		obrotamer.html obprobe.html obgen.html obconformer.html


man_MANS = babel.1 obchiral.1 obfit.1 obgrep.1 obrotate.1 obprop.1  \
			obminimize.1 obenergy.1 obrotamer.1 \
      obprobe.1 obgen.1 obconformer.1 \
			roundtrip.1

# man pages are hand-written, since doxygen man pages are poorly formatted
