
file(GLOB openbabel_headers openbabel/*.h)
file(GLOB math_headers      openbabel/math/*.h)
file(GLOB stereo_headers      openbabel/stereo/*.h)
file(GLOB depict_headers      openbabel/depict/*.h)
file(GLOB lbfgs_headers       LBFGS/*.h)

if(WITH_INCHI)
if(NOT OPENBABEL_USE_SYSTEM_INCHI)
install(FILES inchi/inchi_api.h          DESTINATION include/inchi)
endif(NOT OPENBABEL_USE_SYSTEM_INCHI)
else(WITH_INCHI)
list(FILTER openbabel_headers      EXCLUDE REGEX ".*inchiformat\\.h$")
endif(WITH_INCHI)
install(FILES chemdrawcdx.h        DESTINATION ${OB_INCLUDE_DIRS}/openbabel)
install(FILES ${openbabel_headers} DESTINATION ${OB_INCLUDE_DIRS}/openbabel)
install(FILES ${math_headers}      DESTINATION ${OB_INCLUDE_DIRS}/openbabel/math)
install(FILES ${stereo_headers}    DESTINATION ${OB_INCLUDE_DIRS}/openbabel/stereo)
install(FILES ${depict_headers}    DESTINATION ${OB_INCLUDE_DIRS}/openbabel/depict)
if(TARGET Eigen3::Eigen)
install(FILES LBFGS.h              DESTINATION ${OB_INCLUDE_DIRS})
install(FILES ${lbfgs_headers}     DESTINATION ${OB_INCLUDE_DIRS}/LBFGS)
endif()
